--- a/cloudbuild-frontend.yaml
+++ b/cloudbuild-frontend.yaml
@@ -1,15 +1,14 @@
 steps:
   # Step 1: Build the frontend Docker image
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
     args:
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/voicebot-frontend:latest'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/voicebot-frontend:$COMMIT_SHA'
-      - '-f'
-      - 'frontend/Dockerfile'
-      - '.'
+      - '-c'
+      - |
+        cd frontend
+        docker build -t gcr.io/$PROJECT_ID/voicebot-frontend:latest \
+          -t gcr.io/$PROJECT_ID/voicebot-frontend:$SHORT_SHA \
+          -f Dockerfile .
 
   # Step 2: Push the frontend image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
