--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,38 +1,41 @@
+# Stage 1: Build the React application
 FROM node:20-alpine AS build
 
 WORKDIR /app
 
-# Copy package files
-COPY package.json package-lock.json* ./
+# Copy package.json and package-lock.json from the frontend folder
+COPY frontend/package.json frontend/package-lock.json* ./
 
 # Install dependencies
 RUN npm ci --only=production
 
-# Copy source
-COPY . .
+# Copy the rest of the frontend source code
+COPY frontend/ .
 
-# Build
+# Build the application
 RUN npm run build
 
+# Stage 2: Serve the application from a lightweight server
 FROM node:20-alpine AS runtime
 
 WORKDIR /app
 
-# Install serve to run the app
+# Install the 'serve' package to run the app
 RUN npm install -g serve
 
-# Copy built app from build stage
+# Copy the built application from the build stage
 COPY --from=build /app/dist ./dist
 
-# Set environment
+# Set the port and environment
 ENV PORT=8080
 ENV NODE_ENV=production
 
+# Expose the port
 EXPOSE 8080
 
-# Health check
+# Add a health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
   CMD node -e "require('http').get('http://localhost:8080', (res) => {if (res.statusCode !== 200) throw new Error(res.statusCode)})"
 
-# Run serve
+# Run the server
 CMD ["serve", "-s", "dist", "-l", "8080"]
