--- a/cloudbuild-frontend.yaml
+++ b/cloudbuild-frontend.yaml
@@ -1,14 +1,15 @@
 steps:
-  # Step 1: Build the frontend Docker image
+  # Step 1: Build the frontend Docker image from the root Dockerfile.frontend
   - name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
     args:
-      - '-c'
-      - |
-        cd frontend
-        docker build -t gcr.io/$PROJECT_ID/voicebot-frontend:latest \
-          -t gcr.io/$PROJECT_ID/voicebot-frontend:$SHORT_SHA \
-          -f Dockerfile .
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/voicebot-frontend:latest'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/voicebot-frontend:$SHORT_SHA'
+      - '-f'
+      - 'Dockerfile.frontend' # Use the root Dockerfile.frontend
+      - '.'                   # Build context is the root directory
 
   # Step 2: Push the frontend image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
