--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,11 +6,15 @@ WORKDIR /app
 # Copy package.json and package-lock.json
 COPY package.json package-lock.json* ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install all dependencies (including devDependencies needed for build)
+RUN npm ci
 
 # Copy the rest of the source code
 COPY . .
+
+# Build argument for API URL (Vite env vars must be available at build time)
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 # Build the application
 RUN npm run build
